--- a/countdown.html
+++ b/countdown.html
@@ -374,7 +374,7 @@
         </div>
         
         <footer>
-            <p>© 2023 Новогодний отсчет | Создано с ❤️ и праздничным настроением!</p>
+            <p>©2025 Новогодний отсчет | Создано с 🌲 и праздничным настроением!</p>
         </footer>
     </div>
 
