--- a/countdown.html
+++ b/countdown.html
@@ -345,11 +345,11 @@
     <div class="container">
         <header>
             <h1 class="twinkle">С Новым Годом!</h1>
-            <p class="subtitle">До наступления нового года осталось:</p>
+            <p class="subtitle">Праздник совсем близко!</p>
         </header>
         
         <div class="timer-container">
-            <h2 class="timer-title"><i class="fas fa-clock timer-icon"></i> Новогодний отсчет</h2>
+            <h2 class="timer-title"><i class="fas fa-clock timer-icon"></i>До нового года осталось:</h2>
             <div class="timer">
                 <div class="time-unit">
                     <div class="time-value" id="days">00</div>
